--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title> hello courseera!</title>
 </head>
 <body>
-<h1>coursera! </h1>
+<h1>coursera! it's great plate form </h1>
 </body>
 </html>
